# Event-Town

./: .gitignore
FastAPIServer/: .env  Dockerfile-app  Dockerfile-flower  Dockerfile-worker  README.md  app.py  config.py  database.py  docker-compose.yml  pyproject.toml
FastAPIServer/alembic/: env.py
FastAPIServer/alembic/versions/: 78c5604d24aa_create_event.py  987379ddc4bb_create_user.py
FastAPIServer/src/: app.py  celery_app.py  database.py
FastAPIServer/src/auth/: auth.py  models.py  schemas.py  utils.py
FastAPIServer/src/events/: models.py  queries.py  routers.py  schemas.py
FastAPIServer/src/messages/: database.py  messages.py  queries.py
FastAPIServer/tests/: conftest.py  test_auth.py  test_events.py
