[tool.poetry]
name = "eventtown"
version = "0.1.0"
description = ""
authors = ["diplodocx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
sqlalchemy = "^2.0.13"
alembic = "^1.10.4"
asyncpg = "^0.27.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
