[tool.poetry]
name = "eventtown"
version = "0.1.0"
description = ""
authors = ["diplodocx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.13"}
fastapi = {extras = ["all"], version = "^0.95.1"}
asyncpg = "^0.27.0"
alembic = "^1.10.4"
greenlet = "^2.0.2"
celery = "^5.2.7"
flower = "^1.2.0"
psycopg2-binary = "^2.9.6"
fastapi-users = {extras = ["sqlalchemy"], version = "^11.0.0"}
pytest = "^7.3.1"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
asyncio_mode="auto"
